--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <title>Chat app</title>
   </head>
   <body>
-    <h1>Gutur Gu😉</h1>
+    <h1>Gutur-Gu😉</h1>
     <div class="main">
       <div class="name">
         <span><i class="fas fa-user"></i></span>
@@ -67,5 +67,10 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="main.js"></script>
+    <footer>
+      <div class="center">
+          copyright &copy; www.gutur-guheroku.com All rights reserved @Gaurav Patel
+      </div>
+  </footer>
   </body>
 </html>
