--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <title>Chat app</title>
   </head>
   <body>
-    <h1>Gutur-Gu😉</h1>
+    <h1>Chativa🙂</h1>
     <div class="main">
       <div class="name">
         <span><i class="fas fa-user"></i></span>
